[tool.poetry]
name = "indrive"
version = "0.01"
description = "Designing the dashboar experience of the driver"
authors = ["Perseus Racing"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
